fix infobox on firefox

--- a/css/stweaks.css
+++ b/css/stweaks.css
@@ -46,7 +46,7 @@
     text-align: center;
     vertical-align: middle;
     /*This will change eventually*/
-    line-height: 35.5px;
+    line-height: 35px;
     border: 1px solid #474747;
 }
 
